@@ -7,7 +7,7 @@
 # Version:		2.12.1
 # Author:		Rene Uittenbogaard
 # Created:		2010-05-28
-# Date:			2011-10-17
+# Date:			2011-11-11
 #
 
 ##########################################################################
@@ -1301,6 +1301,12 @@ use constant UPDATES => {
 	# ----- 2.12.1 ---------------------------------------------------------
 	'2.12.1' => {
 		additions => [{
+			ifnotpresent => qr/:ks8=.*?:\s*# shift-F8/,
+			before => qr/^# gnome-terminal handles\s+F1\s+itself/,
+			batch => [
+				"# :ks8=\\e[19;2~:             # shift-F8\n",
+			],
+		}, {
 			ifnotpresent => qr/(?:^|:)\*\.xz=[^:]*:/,
 			before => qr/(?:^|:)\*\.gz=[^:]*:/,
 			batch => [
