@@ -1,6 +1,7 @@
 2.12.1
 
 * added: MIME types for .xz and .txz.
+* added: shift-F8 for easy removal of oldmarks and newmarks.
 
 2.12.0
 
